data/mosquitto/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: data
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      securityContext:
        runAsUser: 1883
        runAsGroup: 1883
      volumes:
      - name: mosquitto
        persistentVolumeClaim:
          claimName: mosquitto
      - name: conf
        configMap:
          name: mosquitto-conf
      - name: passwd
        secret:
          secretName: mosquitto-passwd

      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0
        ports:
        - containerPort: 1883
        volumeMounts:
        - name: mosquitto
          mountPath: /mosquitto/data
          subPath: data
        - name: conf
          mountPath: /mosquitto/config
        - name: passwd
          mountPath: /etc/mosquitto
