data/mosquitto/03.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: data
spec:
  selector:
    app: mosquitto
  ports:
  - name: unencrypted
    port: 1883
    protocol: TCP
  - name: encrypted
    port: 8883
    protocol: TCP
